--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,9 +1,9 @@
 name: GitHub Pages Deploy
 
-on:
-  push:
-    branches:
-      - main
+# on:
+#  push:
+#    branches:
+#      - main
 
 concurrency:
   group: "pages-deploy"
